done for the night

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,18 @@
     <meta name='keywords' content='nifties, nfties, NFTs, ERC-721, non fungible tokens, non-fungible, NIFTY, hackathon, ethereum, blockchain, game, dapp,'>
     <meta name='author' content='Austin Thomas Griffith, austin@concurrence.io'>
 
+
+    <meta property="og:title" content="Nifties vs Nfties">
+    <meta property="og:type" content="game">
+    <meta property="og:url" content="https://nifties.io">
+    <meta property="og:image" content="https://nifties.io/niftiesvsnftiestitle.jpg">
+    <meta property="og:description" content="Craft an ERC-721 monster to cast your vote. Yes (eye) in Nifties? No (eye) in Nfties?">
+
+    <meta name="twitter:title" content="Nifties vs Nfties">
+    <meta name="twitter:description" content="Craft an ERC-721 monster to cast your vote. Yes (eye) in Nifties? No (eye) in Nfties?">
+    <meta name="twitter:image" content="https://nifties.io/niftiesvsnftiestitle.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+
   </head>
   <body>
     <noscript>
