--- a/public/index.html
+++ b/public/index.html
@@ -32,5 +32,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script src="offline.js"></script>
   </body>
 </html>
